# soc_ai_agent_web_app

./: .dockerignore  .editorconfig  .env.example  .gitignore  DEPLOY.md  DESIGN.md  Dockerfile  Makefile  README.md  TODO.md  design-qa.md  nixpacks.toml  package.json  pnpm-lock.yaml  pyproject.toml  railway.agents.json  railway.api.json
.github/workflows/: ci.yml
apps/api/: README.md  __init__.py  agentos_client.py  db.py  deps.py  dev_seed.py  errors.py  main.py  pyproject.toml  rbac.py  schemas.py  store.py
apps/api/routers/: agents.py  approvals.py  assets.py  assistant.py  autonomy.py  cases.py  incidents.py  integrations.py  metrics.py  reports.py  rules.py  search.py  settings.py  telemetry.py  tenants.py  v1.py
apps/api/tests/: conftest.py  test_assets.py  test_auth.py  test_health.py  test_integrations.py  test_reports.py  test_rules.py  test_rules_apply.py  test_settings.py  test_tenants.py
apps/web/: .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  railway.json
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/(app)/: layout.tsx
apps/web/src/app/login/: login-form.tsx  page.tsx
apps/web/src/app/onboarding/: page.tsx
apps/web/src/components/: app-header.tsx  app-sidebar.tsx  page-stub.tsx  sidebar-context.tsx  theme-toggle.tsx
apps/web/src/components/soc/: flagship-ui.tsx
apps/web/src/components/ui/: button.tsx  card.tsx  status-pill.tsx
apps/web/src/features/assets/: assets-workspace.tsx
apps/web/src/features/automation/: automation-workspace.tsx
apps/web/src/features/cases/: case-detail.tsx  cases-workspace.tsx
apps/web/src/features/configurations/: configurations-workspace.tsx
apps/web/src/features/dashboard/: dashboard-workspace.tsx  telemetry-panel.tsx
apps/web/src/features/incidents/: incident-detail.tsx  incidents-list.tsx
apps/web/src/features/investigations/: investigation-workspace.tsx
apps/web/src/features/reports/: reports-workspace.tsx
apps/web/src/features/rules/: monitors-panel.tsx  rule-editor.tsx  rules-workspace.tsx
apps/web/src/features/settings/: settings-workspace.tsx
apps/web/src/features/workspaces/: assets-workspace.tsx  automation-workspace.tsx  cases-workspace.tsx  (+12 more)
apps/web/src/lib/: api.ts  demo-soc-data.ts  live-data.ts  nav.ts  rule-types.ts  workspace-data.ts
docs/: 00-competitive-analysis.md  01-prd.md  02-architecture.md  03-agents.md  04-data-and-tenancy.md  05-auth-and-integrations.md  06-detection-engine.md  07-data-model-and-api.md  08-roadmap.md  09-chat-generative-ui.md  10-external-tools.md
docs/superpowers/plans/: 2026-07-20-aegis-flagship-frontend.md
docs/superpowers/specs/: 2026-07-20-aegis-flagship-frontend-design.md
infra/: README.md  clickhouse_migrate.py  docker-compose.yml  opensearch_setup.py  seed.py
infra/clickhouse/: schema.sql
infra/clickhouse/users.d/: cors.xml
infra/logstash/: README.md
infra/logstash/pipeline/: aegis.conf
infra/supabase/: config.toml  seed.sql
infra/supabase/migrations/: 0001_init.sql
infra/vector/: vector.yaml
services/agents/: README.md  pyproject.toml
services/agents/src/aegis_agents/: __init__.py  agentos_app.py  agents.py  context.py  hooks.py  instructions.py  mcp.py  models.py  roster.py  service.py  team.py  workflow.py
services/agents/src/aegis_agents/tools/: __init__.py  clickhouse.py  opensearch.py  rules.py  soar.py  threat_intel.py
services/detection/: README.md  pyproject.toml
services/detection/src/aegis_detection/: __init__.py  compile.py  correlate.py  emit.py  monitor.py  persist.py  run.py  scheduler.py  schema.py
services/detection/tests/: test_compile.py  test_monitor.py  test_run.py
services/ingestion/: README.md  pyproject.toml
services/ingestion/src/aegis_ingestion/: __init__.py
supabase/migrations/: 0001_aegis_core.sql  0002_tenants.sql  0003_tenant_id_text.sql
(+27 files in other folders)
