[project]
name = "aegis"
version = "0.0.0"
description = "Aegis — AI-Native Open XDR & Autonomous SOC Platform (Python services)"
requires-python = ">=3.13"

# uv workspace: each Python service/package is a member.
[tool.uv.workspace]
members = [
  "apps/api",
  "services/agents",
  "services/detection",
  "services/ingestion",
  "packages/aegis-core",
  "packages/mcp/*",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S", "PL"]

[tool.ruff.lint.isort]
known-first-party = ["aegis_core", "apps"]

[tool.ruff.lint.per-file-ignores]
# Non-secret dev defaults live in settings; ``password``/``secret`` fields trip S105/S106.
"**/settings.py" = ["S105", "S106"]
# Tests use ``assert`` (S101), sample tokens/secrets (S105/S106) and magic values (PLR2004).
"**/tests/**" = ["S101", "S105", "S106", "PLR2004"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["apps", "services", "packages"]
