[project]
name = "aegis-api"
version = "0.0.0"
description = "Aegis API / BFF (FastAPI)."
requires-python = ">=3.13"
dependencies = [
  "aegis-core",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pyjwt>=2.10",
  "python-multipart>=0.0.9",
  "psycopg[binary]>=3.2",
  "psycopg-pool>=3.2",
]

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]

# Run from source (``uvicorn apps.api.main:app``) — not built/installed as a wheel.
[tool.uv]
package = false

[tool.uv.sources]
aegis-core = { workspace = true }
