[project]
name = "aegis-agents"
version = "0.1.0"
description = "Argus — Aegis autonomous SOC agent crew (Agno + AgentOS)"
requires-python = ">=3.13"
dependencies = [
  "agno>=1.0",
  "anthropic>=0.40",
  "aegis-core",
  "httpx>=0.27",
  "fastapi>=0.115",
  "uvicorn>=0.32",
  "pyyaml>=6.0",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "openai>=1.50",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis_agents"]

[tool.uv.sources]
aegis-core = { workspace = true }
