[project]
name = "aegis-detection"
version = "0.1.0"
description = "Aegis detection engine — rule schema, compilers, scheduler, backtest"
requires-python = ">=3.13"
dependencies = [
  "aegis-core",
  "pydantic>=2.9",
  "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis_detection"]

[tool.uv.sources]
aegis-core = { workspace = true }
