[project]
name = "aegis-ingestion"
version = "0.1.0"
description = "Aegis ingestion service — Vector pipeline + connector management"
requires-python = ">=3.13"
dependencies = ["aegis-core"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis_ingestion"]

[tool.uv.sources]
aegis-core = { workspace = true }
